--- a/cristina/bio.html
+++ b/cristina/bio.html
@@ -34,7 +34,7 @@
             <span><img src="/assets/Images/arrow-down.svg" alt=""></span>
           </button>-->
          <a id="cris-exp" class="nav-link dropdown-toggle d-flex drop-container" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-target=".navbar-collapse.show">
-           Cristina <span class="d-none d-lg-block"><img src="/assets/Images/arrow-down.svg" alt=""></span></a>
+           Cristina <span class="d-none d-lg-block"><img src="../assets/Images/arrow-down.svg" alt=""></span></a>
          
           <div id="bio-menu" class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" data-toggle="" data-target=".navbar-collapse.show" id="bio-button"  href="/cristina/bio.html">Bio</a>
@@ -111,7 +111,7 @@ PRÓXIMAMENTE
 <div class="row mb-lg-5 pb-lg-5">
 <div class="col-12 col-lg-8 d-flex img-fluid justify-content-center justify-content-lg-end pb-5 bio-img-container" 
 >
-<img class="img-fluid" src="/assets/Images/Rectangle 10.svg" alt="">
+<img class="img-fluid" src="../assets/Images/Rectangle 10.svg" alt="">
 </div>
 <div class="col-12 d-flex col-lg-4 bio-p-container pb-5 align-items-lg-center">
 <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
